--- a/style.css
+++ b/style.css
@@ -1,5 +1,63 @@
+@import url("https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap");
+
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Jost", serif;
+}
+
+.homepage {
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background: radial-gradient(ellipse at center, #ff2a2a71 10%, #8b9cff 90%);
+}
+
+
+.heading {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.calculator {
+    width: 90%;
+    min-height: 300px;
+    border-radius: 20px;
+    padding: 30px;
+    background-color: #e6e6e6;
+    box-shadow: 3px 3px 4px rgb(70, 70, 70);
+}
+
+@media (min-width: 500px) {
+
+    .heading {
+        flex-direction: row;
+        margin: 30px 0;
+    }
+
+    .calculator {
+        width: 400px;
+    }
+}
+
+
+/* calculator input fields styling */
+
+input {
+    background-color: aliceblue;
+    padding: 5px 10px;
+    border: none;
+    width: 60%;
+    box-shadow: 2px 2px 2px grey;
+    margin: 10px 0;
+}
+
+input label {
+
 }
