--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background: radial-gradient(ellipse at center, #ff2a2a71 10%, #8b9cff 90%);
+  background: radial-gradient(circle at center, #ff2a2a71 10%, #8b9cff 90%);
 }
 
 
@@ -27,9 +27,11 @@
 
 .calculator {
     width: 90%;
-    min-height: 300px;
+    min-height: 200px;
     border-radius: 20px;
     padding: 30px;
+    display: grid;
+    place-items: center;
     background-color: #e6e6e6;
     box-shadow: 3px 3px 4px rgb(70, 70, 70);
 }
@@ -37,7 +39,6 @@
 @media (min-width: 500px) {
 
     .heading {
-        flex-direction: row;
         margin: 30px 0;
     }
 
@@ -58,6 +59,15 @@ input {
     margin: 10px 0;
 }
 
-input label {
+label {
+    font-size: 18px;
+    font-weight: bold;
+}
 
+#calculate {
+    margin: 30px 0 0 0;
+    padding: 5px 10px;
+    width: 70%;
+    border: none;
+    font-weight: bold;
 }
